# test_task_ciplay

./: .gitignore  README.md  docker-compose.yaml
webapp/: Dockerfile  docker-compose.yaml  event.db  pyproject.toml  requirements.txt
webapp/app/: database.py  main.py  models.py  schemas.py
